<resources>
    <string name="app_name">游记</string>
    <string name="activity_write">写游记</string>
    <string name="activity_account">记账</string>
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_save">保存</string>
    <string name="action_delete">删除</string>
    <string name="activity_read">游记详情</string>
    <string name="btn_weather_tool">查询天气</string>

    <string name="add_account">记一笔</string>
    <string name="category">类别：</string>
    <string name="hint_category">请输入消费类别</string>
    <string name="input_money">收入</string>
    <string name="output_money">支出</string>
    <string name="money">金额：</string>
    <string name="hint_money">请输入金额</string>

    <string name="tv_travel">游记</string>
    <string name="tv_account">账本</string>
    <string name="tv_tool">工具</string>
    <string name="tv_topic">专题</string>
    <string name="tv_stroke">行程</string>
    <string name="tv_travelNote">旅行地</string>

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">亲！高抬贵手</string>
    <string name="pull_to_refresh_refreshing_label">拼命加载中...\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>

    <!-- 分享成功失败的 Toast -->
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="weibosdk_demo_toast_share_response_args_success">收到微博发起的请求成功</string>
    <string name="weibosdk_demo_toast_share_response_args_failed">收到客户端请求消息失败</string>

</resources>
