<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            style="@style/rg_main"
            android:text="@string/tv_travel" />

        <RadioButton
            style="@style/rg_main"
            android:text="@string/tv_account" />

        <RadioButton
            style="@style/rg_main"
            android:text="@string/tv_tool" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_main_viewpager_height"
        android:orientation="horizontal">

        <TextView
            style="@style/tv_main"
            android:background="@color/holo_blue_dark" />

        <TextView style="@style/tv_main" />

        <TextView style="@style/tv_main" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
